# redis-desktop-client

./: .eslintrc  .gitignore  .hintrc  .npmrc  .nvmrc  .prettierignore  .stylelintrc  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  commitlint.config.js  eslint.config.mjs  index.html  justfile  package.json  pnpm-lock.yaml  vite.config.ts
.agent/rules/: project.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  preview.yml  release.yml  test.yml  updater.yml
.husky/: commit-msg  pre-commit
docs/: DEVELOPMENT_PLAN.md  REQUIREMENTS.md
scripts/: bump-version.js  preinstall.js  verify-commit.js
src/: context.tsx  main.tsx  styles.css
src-tauri/: .env  .gitignore  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: config.toml
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/libs/dal/: Cargo.toml  README.md
src-tauri/libs/dal/src/: lib.rs
src-tauri/libs/dal/src/core/: helpers.rs
src-tauri/libs/dal/src/structs/: mod.rs  server_info.rs  setting.rs
src-tauri/migrations/2023-03-24-084023_server_fnfo/: down.sql  up.sql
src-tauri/src/: cmd.rs  lib.rs  main.rs  response.rs  schema.rs  tests.rs
src-tauri/src/commands/: cli.rs  connection.rs  data.rs  export.rs  keys.rs  mod.rs  pubsub.rs  server.rs  values.rs
src-tauri/src/common/: cmd.rs  enums.rs  mod.rs  request.rs  response.rs
src-tauri/src/config/: encryption.rs  mod.rs  store.rs
src-tauri/src/core/: manager.rs  mod.rs  models.rs  redis_helper.rs
src-tauri/src/dao/: db.rs  mod.rs  models.rs  schema.rs  server.rs  setting.rs
src-tauri/src/redis/: client.rs  manager.rs  mod.rs  redis_helper.rs  types.rs
src-tauri/src/ui/: menu.rs  mod.rs  tray.rs
src-tauri/src/utils/: dirs.rs  helper.rs  init.rs  mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: command-palette.tsx  confirm-danger-dialog.tsx  error-boundary.tsx  providers.tsx  update-dialog.tsx
src/components/EditorOption/: index.module.less  index.tsx
src/components/Footer/: index.module.less  index.tsx
src/components/KeyDetail/: index.module.css  index.tsx
src/components/MonacoDetail/: index.module.less  index.tsx
src/components/MonacoPanel/: index.module.css  index.module.less  index.tsx
src/components/Panel/: index.tsx
src/components/RedisKeyBar/: index.module.css  index.tsx
src/components/browser/: add-field-dialog.tsx  data-browser.tsx  export-dialog.tsx  import-dialog.tsx  key-detail.tsx  key-dialog.tsx  key-list.tsx  key-toolbar.tsx  key-tree.tsx  ttl-dialog.tsx  value-viewer.tsx
src/components/cli/: cli-console.tsx  command-input.tsx  terminal-output.tsx
src/components/connection/: connection-dialog.tsx  export-connections-dialog.tsx  import-connections-dialog.tsx
src/components/layout/: connection-item.tsx  language-switcher.tsx  (+7 more)
src/hooks/: use-connection-drag.ts  use-global-shortcuts.ts  use-update-checker.ts  useCountdown.tsx  useStorage.ts
src/i18n/: index.ts
src/lib/: tauri-api.ts
src/stores/: app-store.ts  browser-store.ts  cli-store.ts  connection-store.ts  monitor-store.ts  pubsub-store.ts
src/typing/: global.ts
src/utils/: changeTheme.ts  cmd.ts  constructKeysToTree.ts  helper.ts  is.ts  request.ts  useLocale.ts
(+36 files in other folders)
