[package]
name = "redis_manager"
version = "0.0.1"
description = "A cross-platform redis gui client"
authors = ["Makise_kurisuu@outlook.jp"]
license = "MIT"
repository = "https://github.com/kurisu994/Redis-Manager.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "^1.0.94"
serde = { version = "^1.0.158", features = ["derive"] }
tauri = { version = "1.2", features = ["devtools", "dialog-all", "shell-open", "system-tray"] }
diesel = { version = "^2.0.3", features = ["sqlite", "uuid"] }
diesel_migrations = { version = "^2.0.0", features = ["sqlite"] }
redis = "^0.23.0"
chrono = "^0.4.24"
log4rs = "^1.2.0"
log = "^0.4.17"
anyhow = "^1.0.70"
lazy_static = "^1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
redis-manager-dev = []
