[package]
name = "redis-desktop-client"
version = "0.1.0"
description = "A cross-platform Redis desktop management tool"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0" }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.29", features = ["tokio-comp", "aio"] }
thiserror = "2"
