[package]
name = "redis-desktop-client"
version = "0.2.0"
description = "A cross-platform Redis desktop management tool"
authors = ["lucifer994@gmail.com"]
license = "MIT"
repository = "https://github.com/kurisu994/redis-desktop-client.git"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.29", features = ["tokio-comp", "aio", "connection-manager"] }
thiserror = "2"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tauri-plugin-opener = "2.5.3"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
